--- a/appwindow.ui
+++ b/appwindow.ui
@@ -2,13 +2,11 @@
 <ui version="4.0">
  <class>AppWindow</class>
  <widget class="QMainWindow" name="AppWindow">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>800</width>
-    <height>600</height>
-   </rect>
+  <property name="minimumSize">
+   <size>
+    <width>1280</width>
+    <height>720</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -29,7 +27,7 @@
         <item>
          <widget class="QLabel" name="duration">
           <property name="text">
-           <string/>
+           <string notr="true"/>
           </property>
          </widget>
         </item>
@@ -46,17 +44,10 @@
           </property>
          </spacer>
         </item>
-        <item>
-         <widget class="QLabel" name="exportStatus">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
        </layout>
       </item>
       <item>
-       <widget class="QWidget" name="videoWidget" native="true">
+       <widget class="QVideoWidget" name="videoWidget" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -71,7 +62,7 @@
      <layout class="QVBoxLayout" name="layBottom">
       <item>
        <layout class="QHBoxLayout" name="layTimeRange">
-	    <item>
+        <item>
          <widget class="QSlider" name="sliderZoom">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -96,154 +87,154 @@
       </item>
       <item>
        <layout class="QHBoxLayout" name="layTimeControls">
-    <item>
-     <widget class="QGroupBox" name="gbTime">
-      <property name="title">
-       <string>Time [ms]</string>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QSpinBox" name="timeLow"/>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblTimeLow">
-         <property name="text">
-          <string>Range Beginning</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblTimeCurrent">
-         <property name="text">
-          <string>Current Time</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="timeCurrent"/>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblTimeHigh">
-         <property name="text">
-          <string>Range End</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="timeHigh"/>
-       </item>
-       <item>
-        <spacer name="spacerTime">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item>
-     <widget class="QGroupBox" name="gbControls">
-      <property name="title">
-       <string>Playback</string>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
-       <item>
-        <widget class="QPushButton" name="playerSkipToStart">
-         <property name="text">
-          <string>|&lt;</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="playerSkipBackward">
-         <property name="text">
-          <string>&lt;</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="playerPlayPause">
-         <property name="text">
-          <string>Play/Pause</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="playerSkipForward">
-         <property name="text">
-          <string>Skip Forward</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblPlaybackSpeed">
-         <property name="text">
-          <string>Speed</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QDoubleSpinBox" name="playbackSpeed"/>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblPlayerVolume">
-         <property name="text">
-          <string>Volume</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSlider" name="playerVolume">
-         <property name="maximumSize">
-          <size>
-           <width>60</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lblUiNitifyRate">
-         <property name="text">
-          <string>UI Updaterate [ms</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="uiNotifyRate"/>
-       </item>
-       <item>
-        <spacer name="spacerPlayerControls">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
-    </item>
-	   </layout>
-	  </item>
+        <item>
+         <widget class="QGroupBox" name="gbTime">
+          <property name="title">
+           <string>Time [ms]</string>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QSpinBox" name="timeLow"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblTimeLow">
+             <property name="text">
+              <string>Range Beginning</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblTimeCurrent">
+             <property name="text">
+              <string>Current Time</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="timeCurrent"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblTimeHigh">
+             <property name="text">
+              <string>Range End</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="timeHigh"/>
+           </item>
+           <item>
+            <spacer name="spacerTime">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QGroupBox" name="gbControls">
+          <property name="title">
+           <string>Playback</string>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QPushButton" name="playerSkipToStart">
+             <property name="text">
+              <string>⏮</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="playerSkipBackward">
+             <property name="text">
+              <string>⏪</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="playerPlayPause">
+             <property name="text">
+              <string>⏯</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="playerSkipForward">
+             <property name="text">
+              <string>⏩</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblPlaybackSpeed">
+             <property name="text">
+              <string>Speed</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QDoubleSpinBox" name="playbackSpeed"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblPlayerVolume">
+             <property name="text">
+              <string>Volume</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSlider" name="playerVolume">
+             <property name="maximumSize">
+              <size>
+               <width>60</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="lblUiNitifyRate">
+             <property name="text">
+              <string>UI Updaterate [ms</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="uiNotifyRate"/>
+           </item>
+           <item>
+            <spacer name="spacerPlayerControls">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </item>
     <item>
-     <widget class="QWidget" name="markinsWidget" native="true"/>
+     <widget class="MarkingsWidget" name="markinsWidget" native="true"/>
     </item>
    </layout>
   </widget>
@@ -252,13 +243,27 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1280</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QVideoWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">qvideowidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MarkingsWidget</class>
+   <extends>QWidget</extends>
+   <header>markingswidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
