--- a/appwindow.ui
+++ b/appwindow.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>AppWindow</class>
  <widget class="QMainWindow" name="AppWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>1280</width>
+    <height>720</height>
+   </rect>
+  </property>
   <property name="minimumSize">
    <size>
     <width>1280</width>
@@ -234,7 +242,20 @@
      </layout>
     </item>
     <item>
-     <widget class="MarkingsWidget" name="markinsWidget" native="true"/>
+     <widget class="MarkingsWidget" name="markinsWidget" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>100</height>
+       </size>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
