Add delete and delete and load next actions
Delete is without recycle bin. So maybe this should include a
confirmation. Or not be an action at all.

Qt does not support moving to recycle bin yet:
https://bugreports.qt.io/browse/QTBUG-47703

--- a/src/appwindow.ui
+++ b/src/appwindow.ui
@@ -275,6 +275,9 @@
     <addaction name="action_Open"/>
     <addaction name="actionNext"/>
     <addaction name="actionPrevious"/>
+    <addaction name="separator"/>
+    <addaction name="actionDelete"/>
+    <addaction name="actionDelete_Next"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -282,6 +285,11 @@
   <action name="action_Open">
    <property name="text">
     <string>&amp;Open</string>
+   </property>
+  </action>
+  <action name="actionDelete">
+   <property name="text">
+    <string>Delete</string>
    </property>
   </action>
   <action name="actionNext">
@@ -293,6 +301,14 @@
    </property>
    <property name="shortcut">
     <string>PgDown</string>
+   </property>
+  </action>
+  <action name="actionDelete_Next">
+   <property name="text">
+    <string>Delete &amp;&amp; Next</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Alt+D</string>
    </property>
   </action>
   <action name="actionPrevious">
