--- a/src/appwindow.ui
+++ b/src/appwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string notr="true">VideoCutter</string>
   </property>
   <widget class="QWidget" name="layMain">
    <layout class="QVBoxLayout" name="verticalLayout_2">
