--- a/src/appwindow.ui
+++ b/src/appwindow.ui
@@ -40,6 +40,28 @@
          </widget>
         </item>
         <item>
+         <widget class="QListView" name="dirFilesList">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>10</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>100</width>
+            <height>16777215</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="spacerFileInfo">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
