--- a/src-dotnet/Videocutter/MainWindow.xaml
+++ b/src-dotnet/Videocutter/MainWindow.xaml
@@ -35,6 +35,7 @@
             <MediaElement Grid.Column="1" Grid.Row="0" x:Name="cMediaElement" LoadedBehavior="Manual" />
             <StackPanel x:Name="PlayerControls" Grid.Column="1" Grid.Row="1">
                 <WrapPanel HorizontalAlignment="Center">
+                    <Button x:Name="btnJumpStart" Click="BtnJumpStart_Click" Padding="4,2">start</Button>
                     <Button Name="btnSkipBackward" Click="BtnSkipBackward_Click" Padding="4,2">bck</Button>
                     <Button Name="btnPlayPause" Click="BtnPlayPause_Click" Padding="4,2">Play/Pause</Button>
                     <Button Name="btnStop" Click="BtnStop_Click" Padding="4,2">Stop</Button>
