--- a/src-dotnet/Videocutter/MainWindow.xaml
+++ b/src-dotnet/Videocutter/MainWindow.xaml
@@ -49,10 +49,19 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Slider Grid.Column="0" x:Name="cFrom" ToolTip="Start of video slice to work with" Value="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=TwoWay}" Maximum="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=OneWay}" />
-                    <Slider Grid.Column="1" x:Name="cTo" ToolTip="End of video slice to work with" Value="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=TwoWay, NotifyOnSourceUpdated=True}" Minimum="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=OneWay}" />
+                    <Slider Grid.Column="0" x:Name="cFrom" ToolTip="Start of video slice to work with" SmallChange="0.1" LargeChange="10" Value="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=TwoWay}" Maximum="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=OneWay}" />
+                    <Slider Grid.Column="1" x:Name="cTo" ToolTip="End of video slice to work with" SmallChange="0.1" LargeChange="10" Value="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=TwoWay, NotifyOnSourceUpdated=True}" Minimum="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=OneWay}" />
                 </Grid>
-                <Button x:Name="btnExport" Click="BtnExport_Click">Export</Button>
+                <StackPanel Orientation="Horizontal">
+                    <Button x:Name="btnExport" Click="BtnExport_Click" Padding="4">Export</Button>
+                    <Label>From [ms]</Label>
+                    <TextBox x:Name="cFromTextBox" Text="{Binding ElementName=cFrom, Path=Value}" VerticalAlignment="Center" />
+                    <Label>To [ms]</Label>
+                    <TextBox x:Name="cToTextBox" Text="{Binding ElementName=cTo, Path=Value}" VerticalAlignment="Center" />
+                    <Label>Maximum</Label>
+                    <TextBox Text="{Binding ElementName=cPosition, Path=Maximum}" VerticalAlignment="Center" />
+                </StackPanel>
+                <controls:MarkingsList Height="120" x:Name="cMarkingsList" DataContext="{Binding ElementName=ThisMainWindow, Path=Markings}" Play="CMarkingsList_Play" Export="CMarkingsList_Export" />
             </StackPanel>
         </Grid>
         <StatusBar Grid.Row="1">
