Further implementation for working with markings, program argument

--- a/src-dotnet/Videocutter/Controls/MarkingsList.xaml
+++ b/src-dotnet/Videocutter/Controls/MarkingsList.xaml
@@ -19,6 +19,20 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Send begin">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Click="SetBegin_Click">Send begin</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Set end">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Click="SetEnd_Click">Set end</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Export">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
