--- a/src-dotnet/Videocutter/Controls/FileInfoUC.xaml
+++ b/src-dotnet/Videocutter/Controls/FileInfoUC.xaml
@@ -4,9 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <Label Name="Filename"></Label>
-        <Label Name="Size"></Label>
-    </StackPanel>
+             d:DesignHeight="100" d:DesignWidth="100"
+             >
+    <GroupBox Header="File Info">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Target="{Binding ElementName=Filename}">Name</Label>
+            <Label Grid.Row="0" Grid.Column="1" x:Name="Filename" Content="{Binding Name}" ToolTip="{Binding Name}" />
+            <Label Grid.Row="1" Grid.Column="0" Target="{Binding ElementName=Size}">Size</Label>
+            <Label Grid.Row="1" Grid.Column="1" x:Name="Size" Content="{Binding Length}" ToolTip="{Binding Length}" />
+        </Grid>
+    </GroupBox>
 </UserControl>
