--- a/src-dotnet/Videocutter/Controls/MarkingsList.xaml
+++ b/src-dotnet/Videocutter/Controls/MarkingsList.xaml
@@ -36,6 +36,13 @@
                 <DataGridTemplateColumn Header="Export">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
+                            <Button Click="Remove_Click">Remove</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Export">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
                             <Button Click="Export_Click">Export</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
