--- a/src-dotnet/Videocutter/MainWindow.xaml
+++ b/src-dotnet/Videocutter/MainWindow.xaml
@@ -48,41 +48,61 @@
                 <GridSplitter Grid.Row="1" Height="1" ResizeDirection="Rows" ResizeBehavior="PreviousAndNext" />
                 <Grid Grid.Row="2" x:Name="cWorkControls">
                     <Grid.RowDefinitions>
+                        <!-- Player button controls -->
                         <RowDefinition Height="Auto" />
+                        <!-- Position slider -->
                         <RowDefinition Height="Auto" />
+                        <!-- Slice -->
                         <RowDefinition Height="Auto" />
+                        <!-- Markings list -->
                         <RowDefinition Height="*" />
+                        <!-- Markings button controls -->
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-                    <WrapPanel Grid.Row="0" x:Name="cPlayerControls" HorizontalAlignment="Center">
-                        <Button x:Name="btnJumpStart" Click="BtnJumpStart_Click" Padding="4,2">start</Button>
-                        <Button Name="btnSkipBackward" Click="BtnSkipBackward_Click" Padding="4,2">bck</Button>
-                        <Button Name="btnPlayPause" Click="BtnPlayPause_Click" Padding="4,2">Play/Pause</Button>
-                        <Button Name="btnStop" Click="BtnStop_Click" Padding="4,2">Stop</Button>
-                        <Button Name="btnSkipForward" Click="BtnSkipForward_Click" Padding="4,2">fwd</Button>
+                    <WrapPanel Grid.Row="0" Grid.Column="0" x:Name="cPlayerControls" HorizontalAlignment="Center">
+                        <Button x:Name="btnJumpStart" Click="BtnJumpStart_Click" MinWidth="60" Margin="4,0" Padding="8,2">⏮</Button>
+                        <Button Name="btnSkipBackward" Click="BtnSkipBackward_Click" MinWidth="60" Margin="4,0" Padding="8,2">⏪</Button>
+                        <Button Name="btnPlayPause" Click="BtnPlayPause_Click" MinWidth="60" Margin="4,0" Padding="8,2">⏯</Button>
+                        <Button Name="btnSkipForward" Click="BtnSkipForward_Click" MinWidth="60" Margin="4,0" Padding="8,2">⏩</Button>
+                        <StackPanel Margin="20,0,0,0" Orientation="Horizontal">
+                            <Button Name="btnStop" Click="BtnStop_Click" MinWidth="60" Margin="4,0" Padding="8,2">⏹</Button>
+                            <CheckBox VerticalAlignment="Center" IsChecked="{Binding ElementName=ThisMainWindow, Path=IsPlayerRepeatOn}" ToolTip="Repeat (at the end of the slice playback, jump back to start and continue playback)">🔁</CheckBox>
+                        </StackPanel>
                     </WrapPanel>
-                    <Grid Grid.Row="1" x:Name="cSliders">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Slider Grid.Row="0" Grid.ColumnSpan="2" x:Name="cPosition" ToolTip="Current playback position" Value="{Binding ElementName=ThisMainWindow, Path=CurrentPosMs, Mode=OneWay}" Minimum="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=OneWay}" Maximum="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=OneWay}" />
-                        <Slider Grid.Row="1" Grid.Column="0" x:Name="cFrom" ToolTip="Start of video slice to work with" SmallChange="0.1" LargeChange="10" Value="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=TwoWay}" Maximum="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=OneWay}" />
-                        <Slider Grid.Row="1" Grid.Column="1" x:Name="cTo" ToolTip="End of video slice to work with" SmallChange="0.1" LargeChange="10" Value="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=TwoWay, NotifyOnSourceUpdated=True}" Minimum="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=OneWay}" />
-                    </Grid>
-                    <StackPanel Grid.Row="2" Orientation="Horizontal">
-                        <Button x:Name="btnExport" Click="BtnExport_Click" Padding="4">Export</Button>
-                        <Label>From [ms]</Label>
-                        <TextBox x:Name="cFromTextBox" Text="{Binding ElementName=cFrom, Path=Value, StringFormat=N0}" VerticalAlignment="Center" IsReadOnly="True" />
-                        <Label>To [ms]</Label>
-                        <TextBox x:Name="cToTextBox" Text="{Binding ElementName=cTo, Path=Value, StringFormat=N0}" VerticalAlignment="Center" IsReadOnly="True" />
-                        <Label>Maximum</Label>
-                        <TextBox Text="{Binding ElementName=cTo, Path=Maximum}" VerticalAlignment="Center" />
-                    </StackPanel>
+                    <GroupBox Grid.Row="1" Grid.Column="0" Header="Playback Position [ms]">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBox Grid.Row="0" Grid.Column="0" MinWidth="80" Text="{Binding ElementName=ThisMainWindow, Path=CurrentPosMs, StringFormat=F0}" />
+                            <Slider Grid.Row="0" Grid.Column="1" x:Name="cPosition" ToolTip="Current playback position" Value="{Binding ElementName=ThisMainWindow, Path=CurrentPosMs, Mode=OneWay}" Minimum="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=OneWay}" Maximum="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=OneWay}" />
+                            <Label Grid.Row="0" Grid.Column="2" Target="{Binding ElementName=cPositionMax}">Maximum:</Label>
+                            <TextBox Grid.Row="0" Grid.Column="3" x:Name="cPositionMax" MinWidth="80" IsReadOnly="True" Text="{Binding ElementName=cTo, Path=Maximum, StringFormat=F0}" VerticalAlignment="Center" />
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Grid.Row="2" Grid.Column="0" Header="Slice">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Row="0" Grid.Column="0">From [ms]</Label>
+                            <TextBox Grid.Row="0" Grid.Column="1" x:Name="cFromTextBox" MinWidth="80" Text="{Binding ElementName=cFrom, Path=Value, StringFormat=F0}" VerticalAlignment="Center" IsReadOnly="True" />
+                            <Slider Grid.Row="0" Grid.Column="2" Margin="10,0" VerticalAlignment="Center" x:Name="cFrom" ToolTip="Start of video slice to work with" SmallChange="0.1" LargeChange="10" Value="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=TwoWay}" Maximum="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=OneWay}" />
+                            <Label Grid.Row="0" Grid.Column="3">To [ms]</Label>
+                            <TextBox Grid.Row="0" Grid.Column="4" x:Name="cToTextBox" MinWidth="80" Text="{Binding ElementName=cTo, Path=Value, StringFormat=F0}" VerticalAlignment="Center" IsReadOnly="True" />
+                            <Slider Grid.Row="0" Grid.Column="5" Margin="10,0" VerticalAlignment="Center" x:Name="cTo" ToolTip="End of video slice to work with" SmallChange="0.1" LargeChange="10" Value="{Binding ElementName=ThisMainWindow, Path=SliceMaxMs, Mode=TwoWay, NotifyOnSourceUpdated=True}" Minimum="{Binding ElementName=ThisMainWindow, Path=SliceMinMs, Mode=OneWay}" />
+                            <Button Grid.Row="0" Grid.Column="6" x:Name="btnExport" Click="BtnExport_Click" Padding="4">Export</Button>
+                        </Grid>
+                    </GroupBox>
                     <controls:MarkingsList Grid.Row="3" x:Name="cMarkingsList" DataContext="{Binding ElementName=ThisMainWindow, Path=Markings}"
                                        Play="CMarkingsList_Play"
                                        Export="CMarkingsList_Export"
@@ -90,9 +110,9 @@
                                        SetEnd="CMarkingsList_SetEnd"
                                        />
                     <StackPanel Grid.Row="4" Orientation="Horizontal">
-                        <Button Click="BtnAddMarking_Click">Add</Button>
-                        <Button Click="BtnAddMarking5s_Click">Add 5s</Button>
-                        <Button Click="BtnExportAllMarkings_Click">Export all</Button>
+                        <Button MinWidth="60" Margin="4,0" Padding="8,2" Click="BtnAddMarking_Click">Add</Button>
+                        <Button MinWidth="60" Margin="4,0" Padding="8,2" Click="BtnAddMarking5s_Click">Add 5s</Button>
+                        <Button MinWidth="60" Margin="4,0" Padding="8,2" Click="BtnExportAllMarkings_Click" ToolTip="Export all markings">Export all</Button>
                     </StackPanel>
                 </Grid>
             </Grid>
