--- a/src-dotnet/Videocutter/Controls/MarkingsList.xaml
+++ b/src-dotnet/Videocutter/Controls/MarkingsList.xaml
@@ -8,42 +8,42 @@
              d:DesignHeight="450" d:DesignWidth="800"
              >
     <GroupBox Header="Markings">
-        <DataGrid x:Name="cDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False">
+        <DataGrid x:Name="cDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Start" Binding="{Binding StartMs, StringFormat=F0}" />
                 <DataGridTextColumn Header="End" Binding="{Binding EndMs, StringFormat=F0}" />
                 <DataGridTemplateColumn Header="Play">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="Button_Click">Play</Button>
+                            <Button Click="Button_Click" Padding="8,2">Play</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Send begin">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="SetBegin_Click">Send begin</Button>
+                            <Button Click="SetBegin_Click" Padding="8,2">Set begin</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Set end">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="SetEnd_Click">Set end</Button>
+                            <Button Click="SetEnd_Click" Padding="8,2">Set end</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Export">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="Remove_Click">Remove</Button>
+                            <Button Click="Remove_Click" Padding="8,2">Remove</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Export">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Click="Export_Click">Export</Button>
+                            <Button Click="Export_Click" Padding="8,2">Export</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
