--- a/src/Videocutter/Controls/MarkingsList.xaml
+++ b/src/Videocutter/Controls/MarkingsList.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KCode.Videocutter.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="450" d:DesignWidth="800" Foreground="White"
              >
-    <GroupBox Header="Markings">
-        <DataGrid x:Name="cDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False">
+    <GroupBox Header="Markings" Foreground="White">
+        <DataGrid x:Name="cDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" Background="Black" Foreground="White">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Start" Binding="{Binding StartMs, StringFormat=F0}" />
                 <DataGridTextColumn Header="End" Binding="{Binding EndMs, StringFormat=F0}" />
